2009-10-28 12:10  Mateusz Loskot <mateusz@loskot.net>

	* [r2702] tests/xmltester/XMLTester.cpp: declare checkBufferSuccess function
	  to take geometries by refernece to const.

2009-10-25 18:47  Mateusz Loskot <mateusz@loskot.net>
	
	* Fixed typo in getCentroid function comment in Geometry.h

2009-10-19 14:47  Mateusz Loskot <mateusz@loskot.net>

	* [r2684] tests/xmltester/tests/buffer_snapround.xml: not well-formed XML,
	  fixed missing attribute.

2009-10-16 15:27  Mateusz Loskot <mateusz@loskot.net>

	* [r2676] tests/xmltester/tests/fme.xml: xmltester/tests: missing
	  double quotes around XML attribute value in fme.xml.

2009-10-14 20:42  Sandro Santilli <strk@keybit.net>

	* [r2675] ChangeLog: regenerate ChangeLog

2009-10-14 15:32  Mateusz Loskot <mateusz@loskot.net>

	* [r2674] build/msvc90/geos_unit/geos_unit.vcproj,
	  build/msvc90/geos_xmltester/geos_xmltester.vcproj,
	  tests/xmltester/XMLTester.cpp, tests/xmltester/makefile.vc: *
	  Optional use of GEOS_DEBUG_MSVC_USE_VLD in XMLTester.cpp
	  * Added xmltester/makefile.vc as port of testrunner.sh for
	  Windows to be able to run all tests in batch:
	  ** nmake /f makefile.vc XMLTESTER=C:\path\to\xmltester.exe

2009-10-14 12:05  Mateusz Loskot <mateusz@loskot.net>

	* [r2673] build/msvc90/geos.sln, build/msvc90/geos_xmltester,
	  build/msvc90/geos_xmltester/geos_xmltester.vcproj: Added
	  msvc90/geos_xmltester to solution for Visual Studio 2008.

2009-10-14 12:03  Mateusz Loskot <mateusz@loskot.net>

	* [r2672] tests/xmltester/XMLTester.cpp: Enable use of Stalkwalker
	  only if building with Visual C++ and GEOS_TEST_USE_STACKWALKER is
	  defined.

2009-10-13 16:25  Mateusz Loskot <mateusz@loskot.net>

	* [r2671] build/msvc90/geos_lib/geos_lib.vcproj: build/msvc90:
	  added missing sources of linearref package. Builds with Visual
	  C++ 9.0 (using both project and makefiles).

2009-10-13 14:20  Frank Warmerdam <warmerdam@pobox.com>

	* [r2670] ChangeLog, capi/geos_c.h.in, nmake.opt,